--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="card" style="background: url(./assets/images/thumbnail/Random_quote_generator.png) center center/cover;">
+                    <div class="card_details">
+                        <div class="card_icons">
+                            <a href="https://github.com/sultan296/quote-generator" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a>
+                            <a href="https://shaiktippusultan-quote-generator.netlify.app/" target="_blank"><i class="fa-solid fa-globe fa-lg"></i></a>
+                        </div>
+                        <div class="project_name">
+                            <h4>Random Quote Generator</h4>
+                            <p>HTML, CSS, JS</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="card" style="background: url(./assets/images/thumbnail/Stop_watch.jpg) center center/cover;">
                     <div class="card_details">
                         <div class="card_icons">
